[package]
name = "lemo"
version = "0.2.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
winapi = { version = "0.3.9", features = ["shellapi", "winuser", "processthreadsapi", "securitybaseapi", "winnt", "handleapi"] }
sysinfo = "0.32"
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1.0"
chrono = "0.4"
